[package]
name = "server"
version = "0.1.0"
authors = ["andy-thomason <andy.thomason@genomicsplc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.1"
futures-util = "0.3.1"
tokio = { version = "0.2.10", features = ["full"] }
